2024-04-14  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-display--update): Refactor to
	diredc--update-listing-switches, fix for wdired-mode.

2024-04-14  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--set-term-environment): Avoid adding shell config
	command to shell history.

2024-04-14  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-other-window): Allow tabbing into
	wdired-mode buffer.

2024-04-14  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--update-control): New feature to revert buffers regularly.
	(diredc--revert-all, diredc-update-interval)
	(diredc--update-timer): Support the new feature.
	(diredc-exit, diredc-mode): Use the new feature.

2024-04-08  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--set-term-environment): Remove setup commands
	from comint history and erase them from the shell buffer display.
	Change method of sending setup commands to use function
	comint-input-sender for all comint buffers.
	(diredc-shell--launch-shell, diredc-shell--launch-eshell): Remove
	send-input commands, now performed uniformly by function diredc--set-term-environment.
	(diredc-shell): Improve user message.

2024-03-14  Boruch Baum  <boruch_baum@gmx.com>

	* (diredc-browse--exclude): Give variable 'var' the local scope
	that it deserves.

2024-02-29  Boruch Baum  <boruch_baum@gmx.com>

	* (diredc-shell): Expand ~ in file-names (for $f1, $f2), properly
	concat and quote lists of marked files (for $t1 $t2), add user
	hint message that C-c C-k will properly close the terminal window,
	add environment variable: $INSIDE_DIREDC

2024-02-29  Boruch Baum  <boruch_baum@gmx.com>

	* (diredc-beginning-of-buffer): Fix to advance to first file line.

2024-02-29  Boruch Baum  <boruch_baum@gmx.com>

	*  (diredc--version): Bump to 1.4

2024-02-19  Boruch Baum  <boruch_baum@gmx.com>

	*  (diredc--version): New variable.

2024-01-31  Boruch Baum  <boruch_baum@gmx.com>
